--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 /* NAVBAR */
 .navbar {
   background: #2c3e50;
-  padding: 0 5%;  /* <--- ΑΛΛΑΓΗ: Βάλε 0 για να μην έχει καθόλου κενό πάνω-κάτω */
+  padding: 10px 5%;  /* <--- ΑΛΛΑΓΗ: Βάλε 0 για να μην έχει καθόλου κενό πάνω-κάτω */
   /* Τα υπόλοιπα μένουν ίδια */
   display: flex;
   justify-content: space-between;
@@ -35,7 +35,7 @@ body {
 
 /* Ρυθμίζει την εικόνα */
 .logo-img {
-    height: 90px; /* <-- Το κάναμε 90px για να είναι πιο μεγάλο */
+    height: 50px; /* <-- Το κάναμε 90px για να είναι πιο μεγάλο */
     width: auto;
     object-fit: contain;
     /* Προαιρετικά: Αν θες να έχει λίγο "αέρα" γύρω του */
